--- a/package.json
+++ b/package.json
@@ -32,9 +32,16 @@
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.7",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.12.1",
+
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+
+    "multer": "^1.4.5-lts.1",
+    "numpy": "^0.0.1",
+    "pandas": "^0.0.3",
+    "python-shell": "^5.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
