--- a/package.json
+++ b/package.json
@@ -30,17 +30,16 @@
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.12.1",
-
-    "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1",
-
     "multer": "^1.4.5-lts.1",
     "numpy": "^0.0.1",
     "pandas": "^0.0.3",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "python-shell": "^5.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
